# cooper-rf-display-backend

./: .gitignore  Cargo.toml  README.md  requirements.txt
src/: config.rs  cors.rs  dongle.rs  information.rs  main.rs  questions.rs  routes.rs  state.rs  storage.rs
src/api/: dashboard.rs  data.rs  edupage.rs  mod.rs  response.rs
src/edupage/: edupage.rs  edupage_deserializers.rs  edupage_traits.rs  edupage_types.rs  mod.rs
src/edupage/trait_implementations/: dbi.rs  login.rs  mod.rs  ringing.rs  substitution.rs  timeline.rs
weather-station/: __main__.py  config.py  exceptions.py  util.py
weather-station/api/: edupage.py  edupage_json.py  edupage_text.py  error_handler.py  sensor_data.py
weather-station/routers/: edupage.py  hardwario.py  sensors.py
weather-station/sensor/: data_collection.py  dongle.py  hardwario.py  netatmo.py  reading.py
