[package]
name = "weather-station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rocket = "0.5.0-rc.1"
futures = "0.3.21"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
num_enum = "0.5.6"
serde_urlencoded = "0.7.0"
serde-aux = "3.0.1"
common_macros = "0.1.1"